# ITALOccultLibrary

./: ALGORITMO_TEST_OCCULTAZIONE.md  ANALISI_IOCCULTCALC_ELEMENTI_EQ1.md  ARCHITECTURE_OVERVIEW.txt  CERTIFICATO_EQUIVALENZA_ORBFIT.md  CERTIFICAZIONE_FINALE.md  CHEBYSHEV_APPROXIMATION.md  CHEBYSHEV_RKF78_COMPLETION_REPORT.md  COMMIT_SUMMARY.md  COMPLETAMENTO_FASE1_2.md  CONFRONTO_TECNICO_ASTDYN_VS_IOCCULTCALC.md  ELEMENTI_ORBITALI_TEST.md  EPHEMERIS_COMPARISON_17030.md  EPHEMERIS_COMPARISON_REPORT.md  FASE1_COMPLETATA.md  FASE2_COMPLETATA.md  FINAL_ANALYSIS_PERTURBATIONS.md  FINAL_STATUS.md  FRAME_CORRETTO_EQ1.md  GUIDA_IMPLEMENTAZIONE_TWO_PHASE.md  GUIDA_INTEGRAZIONE_IOCCULTCALC.md  IMPLEMENTATION_CHECKLIST.md  INDICE_DOCUMENTAZIONE.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  INTEGRATORS_GUIDE.md  IOCCULTCALC_FILE_ELEMENTI_ORBITALI.md  JPL_DE441_INTEGRATION_PLAN.md  NEXT_STEPS_COMMANDS.sh  ORBFIT_CPP_CONVERSION_PLAN.md  ORBFIT_VALIDATION_PLAN.md  PIANO_INTEGRAZIONE_ASTDYN_IOCCULTCALC.md  POMPEJA_COMPARISON_REPORT_CORRECTED.md  QUICK_SUMMARY.md  README_DOCUMENTAZIONE.md  REPORT_FINALE_INTEGRAZIONE.md  RIEPILOGO_PROGETTO.md  SESSION_COMPLETE_SUMMARY.md  SESSION_FINAL_SUMMARY.md  SESSION_SUMMARY_DEC4.md  SUNTO_FINALE_VERIFICHE.md  (+66 more)
astdyn/: CMakeLists.txt  LICENSE  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE7_COMPLETION_REPORT.md  README.md
astdyn/cmake/: Version.hpp.in
astdyn/data/: 17030.eq1  203_pompeja.eq1
astdyn/docs/: ASTDYN_EXPORT_GUIDE.md  CMakeLists.txt  Doxyfile  EPHEMERIS_SUPPORT.md  OOP_CONFIG_SHORT.md  RKF78_INTEGRATOR.md  VALIDATION_REPORT.md  generate_validation_pdf.py
astdyn/docs/manual/en/: 08_numerical_integration_NEW.tex  10_state_transition.tex  14_differential_correction.tex
astdyn/docs/manual/it/: 10_matrice_transizione.tex  14_correzione_differenziale.tex  16_architettura.aux  16_architettura.tex  17_moduli_core.aux  17_moduli_core.tex  18_parser.aux  19_riferimento_api.aux  20_esempi.aux  21_validazione.aux  22_casi_studio.aux  23_prestazioni.aux  24_riferimenti.aux  25_appendici.aux  26_sviluppi_futuri.aux  26_sviluppi_futuri.tex  main_it.aux  main_it.lof  main_it.lot  main_it.tex  main_it.toc
astdyn/examples/: CMakeLists.txt  advanced_ephemeris_example.cpp  basic_usage.cpp  coordinates_example.cpp  ephemeris_example.cpp  propagation_benchmark.cpp  propagation_diagnostic.cpp
astdyn/include/astdyn/: AstDyn.hpp  AstDynEngine.hpp
astdyn/include/astdyn/close_approach/: CloseApproach.hpp
astdyn/include/astdyn/coordinates/: CartesianState.hpp  CometaryElements.hpp  EquinoctialElements.hpp  KeplerianElements.hpp  ReferenceFrame.hpp
astdyn/include/astdyn/core/: Constants.hpp  Types.hpp
astdyn/include/astdyn/ephemeris/: AsteroidPerturbations.hpp  CelestialBody.hpp  EphemerisInterface.hpp  EphemerisProvider.hpp  JPLDEProvider.hpp  PlanetaryData.hpp  PlanetaryEphemeris.hpp  VSOP87Provider.hpp
astdyn/include/astdyn/io/: AstDynConfig.hpp
astdyn/include/astdyn/math/: LinearAlgebra.hpp  MathUtils.hpp
astdyn/include/astdyn/observations/: MPCReader.hpp  (+2 more)
astdyn/include/orbfit/: OrbFitEngine.hpp
astdyn/src/: AstDynEngine.cpp  CMakeLists.txt  OrbFitEngine.cpp  astdyn_convert.cpp  astdyn_main.cpp  orbfit_convert.cpp  orbfit_main.cpp
astdyn/src/close_approach/: CloseApproach.cpp
astdyn/src/coordinates/: KeplerianElements.cpp
astdyn/src/ephemeris/: AsteroidPerturbations.cpp  PlanetaryData.cpp  PlanetaryEphemeris.cpp
astdyn/src/io/: AstDynConfig.cpp  OrbFitConfig.cpp
astdyn/src/math/: LinearAlgebra.cpp  MathUtils.cpp
astdyn/src/observations/: MPCReader.cpp  Observation.cpp  ObservatoryDatabase.cpp
astdyn/src/orbit_determination/: DifferentialCorrector.cpp  LeastSquaresFitter.cpp  OrbitDetermination.cpp  ResidualCalculator.cpp  Residuals.cpp  StateTransitionMatrix.cpp
astdyn/src/propagation/: AnalyticalJacobian.cpp  GaussIntegrator.cpp  Integrator.cpp  OrbitalElements.cpp  Propagator.cpp  RadauIntegrator.cpp  STMPropagator.cpp
astdyn/src/time/: TimeScale.cpp
astdyn/tests/: CMakeLists.txt  OCCULTATION_17030_RESULTS.md  test_17030_astdyn  test_17030_astdyn.cpp  test_17030_occultation.py  test_17030_with_astdyn_lib.cpp  test_astdyn_config.cpp  test_astdyn_engine.cpp  test_asteroid_17030  test_asteroid_17030_astdyn.cpp  test_asteroid_17030_jpl  test_asteroid_17030_jpl.cpp  test_asteroid_17030_occultation.cpp  test_asteroid_perturbations.cpp  test_close_approach.cpp  test_constants.cpp  test_coordinates.cpp  test_ephemeris.cpp  test_epoch_check  test_epoch_check.cpp  test_jacobians.cpp  test_math.cpp  test_mean_osculating.cpp  test_occultation  test_orbfit_config.cpp  test_orbfit_engine.cpp  test_orbit_determination.cpp  test_pompeja_diffcorr_simple.cpp  test_pompeja_validation.cpp  test_propagation.cpp  test_propagator_asteroids.cpp  test_reference_frames.cpp  test_rkf78_debug.cpp  test_time.cpp  test_types.cpp  test_utils.cpp  test_validation.cpp  test_validation_jpl  test_validation_jpl.cpp  validation_ceres.cpp
astdyn/tests/data/: ceres.opt  ceres_mean.oef  test_observations.mpc
astdyn/tools/: astdyn_propagator.cpp  sierks_position.cpp  sierks_precision.cpp  test_rkf78.cpp  test_roundtrip.cpp
examples/: CMakeLists.txt  README.md  build_standalone_example.sh  test_astdyn_integration_standalone.cpp  test_astdyn_simple  validate_jpl_horizons.py
italoccultlibrary/: CMakeLists.txt  README.md
italoccultlibrary/include/: astdyn_wrapper.h  astdyn_wrapper_old.h  chebyshev_approximation.h  chebyshev_rkf78_propagation.h  orbital_conversions.h
italoccultlibrary/src/: astdyn_wrapper.cpp  chebyshev_approximation.cpp  chebyshev_rkf78_propagation.cpp
orbfit-cpp/src/: CMakeLists.txt
orbfit-cpp/src/core/: .gitkeep
orbfit-cpp/src/ephemeris/: PlanetaryData.cpp  PlanetaryEphemeris.cpp
orbfit-cpp/src/math/: LinearAlgebra.cpp  MathUtils.cpp
orbfit-cpp/src/propagation/: Integrator.cpp  OrbitalElements.cpp  Propagator.cpp
orbfit-cpp/src/time/: TimeScale.cpp
orbfit-cpp/tests/: CMakeLists.txt  test_constants.cpp  test_coordinates.cpp  test_jacobians.cpp  test_math.cpp  test_propagation.cpp  test_time.cpp  test_utils.cpp
(+74 files in other folders)
